# quantplay-mcp

./: README.md  deploy.sh  pyproject.toml  requirements.txt  setup.py
quantplay_mcp/: __init__.py  __main__.py  client.py  config.py  models.py  server.py
